# go-alias-rust

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  current_theme.json  hidden-shortcuts.json  package-lock.json  package.json  run.sh  shortcuts.json  themes.json
.github/workflows/: desktop-release.yml  release.yml
packaging/linux/: go-alias-rust.postinst  go-alias-rust.postrm  go-alias-rust.service
packaging/linux/defaults/: current_theme.json  shortcuts.json  themes.json
packaging/macos/: build-pkg.sh  com.omegagiven.go-alias-rust.plist  postinstall
packaging/windows/: install.ps1  main.wxs  uninstall.ps1
presets/themes/: helldiver.ogdevdesk-theme.json  im-blue.ogdevdesk-theme.json
scripts/: install-local-unix.sh  install-local-windows.ps1
src/: ai.rs  app_db.rs  app_state.rs  base_page.rs  board.rs  formatter.rs  inspector.rs  lib.rs  main.rs  manage_connections.rs  not_found.rs  note.rs  paint.rs  request.rs  server.rs  signaling.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/elements/: calculator.rs  connection_tool.rs  jwt_decoder.rs  mod.rs  shortcut.rs  sidebar.rs  theme.rs
src/pages/: board.rs  inspector.rs  manage_connections.rs  mod.rs  not_found.rs  note.rs  paint.rs  request.rs
src/pages/sql/: crypto.rs  helpers.rs  mod.rs  models.rs  routes.rs
src/sql/: helpers.rs  models.rs  routes.rs
static/: ai_assistant.js  app.js  calculator.js  desktop_shell.html  desktop_tool.html  inspector.css  inspector.js  jwt_decoder.js  p2p_logic.js  requests.css  requests.js  scratchpad.js  settings.js  shortcuts.css  shortcuts.js  sidebar.js  sql.css  sql.js  sql_connections.css  sql_connections.js  style.css
templates/: base.html
wix/: main.wxs
