[package]
name = "ogdevdesk_desktop"
version = "0.1.7"
description = "Desktop wrapper for OGdevDesk"
authors = ["OmegaGiven"]
license = "Apache-2.0"
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ogdevdesk_service = { path = ".." }
tauri = { version = "2", features = [] }
